# quetz-frontend

./: .eslintignore  .eslintrc.js  .gitignore  .prettierignore  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  README.md  RELEASE.md  environment.yml  lerna.json  package.json  pyproject.toml  setup.cfg  setup.py  tsconfig.eslint.json  tsconfig.json  tsconfigbase.json  webpack-dev.config.js  webpack.common.config.js  webpack.config.js  webpack.dev.config.js  webpack.prod.config.js
.devcontainer/: apt-devel.txt  config.toml  devcontainer.json  fix-permissions.sh  startup.sh
.github/actions/base-setup/: action.yml
.github/workflows/: build.yml  check-release.yml  prep-release.yml  publish-release.yml
@types/: global.d.ts
builder/: README.md  metadata_schema.json  package.json
builder/src/: build-quetzextension.ts  build.ts  extensionConfig.ts  index.ts  webpack-plugins.ts  webpack.config.base.ts
examples/light_theme/: .gitignore  .prettierignore  LICENSE  MANIFEST.in  README.md  RELEASE.md  install.json  package.json  pyproject.toml  setup.py
examples/light_theme/quetz_light_theme/: __init__.py
examples/light_theme/src/: index.ts
examples/tests/: example.spec.ts  package.json  playwright.config.ts
public/: index.html
quetz_frontend/: backend.py  cli.py  extensions.py  frontend.py  main.py  paths.py  resources.py  utils.py
quetz_frontend/app/: bootstrap.js  index.js  package.json  publicpath.js  webpack.config.js  webpack.config.watch.js  webpack.prod.config.js  webpack.prod.minimize.config.js  webpack.prod.release.config.js
quetz_frontend/app/public/: site.webmanifest
quetz_frontend/app/templates/: default_settings.json  index.ejs  partial.html  settings.json
quetz_frontend/static/: 106.bundle.js  145.bundle.js  251.bundle.js  341.bundle.js  392.bundle.js  575.bundle.js  693.bundle.js  693.bundle.js.LICENSE.txt  741.bundle.js  747.bundle.js  793.bundle.js  880.bundle.js  884.bundle.js  912.bundle.js  931.bundle.js  _8465-_75810.bundle.js  _8465-_75811.bundle.js  build_index_js.bundle.js  bundle.js  index.html  node_modules_codemirror_mode_sync_recursive_js_.bundle.js  node_modules_jupyterlab_theme-dark-extension_lib_index_js-_f1b7-_8465-_75810.bundle.js  node_modules_jupyterlab_theme-dark-extension_lib_index_js-_f1b7-_8465-_75811.bundle.js  node_modules_jupyterlab_theme-light-extension_lib_index_js-_d00b-_8465-_75810.bundle.js  node_modules_jupyterlab_theme-light-extension_lib_index_js-_d00b-_8465-_75811.bundle.js  node_modules_moment_locale_sync_recursive_.bundle.js  report.html  settings.json  vendors-node_modules_codemirror_mode_apl_apl_js-node_modules_codemirror_mode_asciiarmor_ascii-26282f.bundle.js  vendors-node_modules_jupyterlab_apputils_lib_tokens_js-node_modules_jupyterlab_translation_li-7664bc.bundle.js  vendors-node_modules_jupyterlab_coreutils_lib_index_js-node_modules_moment_locale_af_js-node_-f0508f.bundle.js  vendors-node_modules_lumino_coreutils_dist_index_es6_js-node_modules_lumino_signaling_dist_in-0facb2.bundle.js
scripts/: bump-version.py  update_builder.py
scripts/builder-patches/: 0001-Apply-renaming-on-builder.patch
src/: index.ts
src/app/: app.ts  shell.ts
src/components/: breadcrumbs.tsx  list.tsx  loader.tsx  pagination.tsx  search-page.tsx  search.tsx  table.tsx
src/plugins/about/: index.tsx
src/plugins/channels/: api.ts  channel-details-info.tsx  channel-details-members.tsx  channelDetails.tsx  channels.tsx  channelsApp.tsx  constants.ts  index.ts  index.tsx  packages.tsx  search.tsx  table.tsx  versions.tsx
src/plugins/channels/details/: index.tsx  tab-members.tsx  tab-packages.tsx
src/plugins/channels/list/: index.tsx  search.tsx
src/plugins/download/: index.tsx
src/plugins/example/: index.ts
src/plugins/home/: index.tsx
src/plugins/jobs/: constants.ts  index.tsx  job.tsx  jobs.tsx  table.tsx
src/plugins/login/: index.ts
src/plugins/package-details/: tab-info.tsx  tab-members.tsx  versions.tsx
src/plugins/paths/: index.ts
src/plugins/router/: index.ts
src/plugins/sessions/: index.ts
src/plugins/topbar/: index.ts  index.tsx  login.tsx  menu.ts  tokens.ts
src/plugins/translator/: index.ts
src/plugins/user/: api-key.tsx  apiKeyDialog.tsx  index.tsx  profile.tsx  types.ts
src/utils/: constants.ts  http.ts  index.ts  notification.tsx  table-configs.tsx
style/: about.css  base.css  channels.css  components.css  download.css  index.css  logInMenu.css  notification.css  packages.css  table.css  topbar.css
templates/: default_settings.json  index.ejs  index.html  settings.json
