[build-system]
requires = ["jupyter_packaging~=0.10,<2"]
build-backend = "jupyter_packaging.build_api"

[tool.isort]
profile = "black"

[tool.jupyter-packaging.options]
skip-if-exists = ["quetz_frontend/app/static/style.js"]
ensured-targets = ["quetz_frontend/app/static/style.js", "quetz_frontend/app/static/package.json"]

[tool.jupyter-packaging.builder]
factory = "jupyter_packaging.npm_builder"

[tool.jupyter-packaging.build-args]
build_cmd = "build:prod"
npm = ["yarn"]

[tool.check-manifest]
ignore = ["quetz_frontend/app/build/**", "yarn.lock", ".*", "package-lock.json"]

[tool.tbump.version]
current = "0.2.0"
regex = '''
  (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)
  ((?P<channel>a|b|rc|.dev)(?P<release>\d+))?
'''

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "v{new_version}"

[[tool.tbump.file]]
src = "quetz_frontend/__init__.py"
