[metadata]
name = quetz-frontend
version = attr: quetz_frontend._version.__version__
description = Quetz frontend as Quetz server extension
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE
author = QuantStack
url = https://github.com/mamba-org/quetz-frontend
platforms = Linux, Mac OS X, Windows
keywords = quetz, mamba, conda
classifiers =
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.7
install_requires =
    typer>=0.4.1
    quetz-server~=0.4
    pydantic

[options.entry_points]
console_scripts =
    quetz-frontend = quetz_frontend.cli:app
quetz.frontend =
    quetz-frontend = quetz_frontend.backend

[options.extras_require]
dev =
    black
    isort
    tbump
