[build-system]
requires = ["jupyter_packaging~=0.10,<2", "quetz-frontend"]
build-backend = "jupyter_packaging.build_api"

[tool.jupyter-packaging.options]
skip-if-exists = ["light_theme/labextension/static/style.js"]
ensured-targets = ["light_theme/labextension/static/style.js", "light_theme/labextension/package.json"]

[tool.jupyter-packaging.builder]
factory = "jupyter_packaging.npm_builder"

[tool.jupyter-packaging.build-args]
build_cmd = "build:prod"
npm = ["yarn"]

[tool.check-manifest]
ignore = ["light_theme/labextension/**", "yarn.lock", ".*", "package-lock.json"]
